FixedTableHeader has now completely aligned scrolling
Added a resize event handler as well to change the window stretching
div's size accordingly. Seems to work, since resizing window still
shows complete table when scrolling.

--- a/app/stylesheets/main.css
+++ b/app/stylesheets/main.css
@@ -68,15 +68,22 @@ Pure menus end
 
 #app {
     margin: 1em;
+    position: fixed;
+}
+
+#tablesizer {
+    position: absolute;
+    left: 1em;
+    top: 22em;
 }
 
 .pos {
-    position: absolute;
+    position: fixed;
     left: 1em;
     top: 22em;
     max-width: 70vh;
     max-height: 50vh;
-    overflow: scroll;
+    overflow: hidden;
 }
 #heading {
     z-index: 10;
